Fix incorrect subtitles languages

On qandroidmetadata, the language code could be truncated before using
QLocale to convert the language code. In some cases, the truncated
language code corresponded to a valid but incorrect language code in
QLocale. To prevent possible errors I removed this truncation.

Fixes: QTBUG-97166
Change-Id: Ie719b03b6a10b9aee061958eec626d3e51a6a2a3
Reviewed-by: Assam Boudjelthia <assam.boudjelthia@qt.io>
(cherry picked from commit 0aa6de09ebaee7630c165bdf967dd2d6e6b79cf2)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>