src/multimedia/platform/android/mediaplayer/qandroidmetadata.cpp
@@ -45,8 +45,11 @@
 #include <QDate>
 #include <QtCore/qlist.h>
 #include <QtConcurrent/qtconcurrentrun.h>
+#include <QLoggingCategory>
 
 QT_BEGIN_NAMESPACE
+
+Q_LOGGING_CATEGORY(lcaMetadata, "qt.multimedia.android.metadata")
 
 // Genre name ordered by ID
 // see: http://id3.org/id3v2.3.0#Appendix_A_-_Genre_List_from_ID3v1
@@ -168,10 +171,14 @@ QLocale::Language getLocaleLanguage(const QString &language)
         return QLocale::AnyLanguage;
 
     QLocale locale(language);
-    if (locale != QLocale::c())
-        return locale.language();
 
-    return QLocale::codeToLanguage(language.left(2));
+    if (locale == QLocale::c()) {
+        qCWarning(lcaMetadata) << "Could not parse language:" << language
+                               << ". It is not a valid Unicode CLDR language code.";
+        return QLocale::AnyLanguage;
+    }
+
+    return locale.language();
 }
 
 QAndroidMetaData::QAndroidMetaData(int trackType, int androidTrackType, int androidTrackNumber,
